# rhacs-manager

./: .gitignore  CLAUDE.md  LICENSE  README.md  cliff.toml  justfile  mkdocs.yml  plan.md  todo.md
backend/: .env.example  Containerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_cve_comments.py  003_risk_acceptance_scopes.py  004_remove_teams_namespace_rbac.py  005_add_escalation_warning_days.py  006_add_namespace_contacts.py  007_add_onboarding_completed.py  008_add_badge_scope_namespaces.py  009_add_remediations.py  010_add_suppression_rules.py  011_add_suppression_rule_scope.py  012_add_suppression_notification_types.py  013_add_badge_is_sec_team.py  014_add_mention_notification_type.py  015_add_risk_acceptance_assigned_to.py  016_add_cve_comment_updated_at.py
backend/app/: config.py  database.py  deps.py  main.py
backend/app/auth/: group_mapping.py  middleware.py
backend/app/badges/: generator.py
backend/app/exports/: excel_generator.py  pdf_generator.py
backend/app/mail/: service.py
backend/app/models/: __init__.py  audit_log.py  badge.py  cve_comment.py  cve_priority.py  escalation.py  global_settings.py  namespace_contact.py  notification.py  remediation.py  risk_acceptance.py  suppression_rule.py  team.py  user.py
backend/app/notifications/: service.py
backend/app/routers/: _scope.py  audit.py  auth.py  badges.py  cves.py  dashboard.py  dev.py  escalations.py  exports.py  images.py  (+9 more)
backend/mcp_server/: api_client.py  config.py  server.py
backend/scripts/: test_escalation_email.py
backend/tests/: conftest.py  test_auth_parsing.py  test_badges.py  test_cve_filter_edge_cases.py  test_cve_filter_service.py  test_mcp_api_client.py  test_mcp_config.py  test_mcp_server.py  test_risk_acceptance_service.py  test_router_cves.py  test_router_dashboard.py  test_router_suppression_rules.py  test_schemas_risk_acceptance.py  test_scope_key.py
mcp-server/: Containerfile  pyproject.toml
mcp-server/mcp_server/: api_client.py  chart_tools.py  config.py  server.py
mcp-server/tests/: test_charts.py  test_mcp_api_client.py  test_mcp_config.py  test_mcp_server.py
(+229 files in other folders)
