[project]
name = "rhacs-manager-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "fpdf2>=2.8",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
    "mcp[cli]>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "B008",   # Depends() in function defaults is idiomatic FastAPI
    "F821",   # Forward-ref "User" in SQLAlchemy relationship strings
    "UP042",  # str+Enum pattern needed for SQLAlchemy column compatibility
    "UP046",  # Generic[T] subclass is standard Pydantic pattern
    "E711",   # != None is required for SQLAlchemy .where() clauses
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
